[package]
name = "toffee"
version = "0.5.1"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"
description = "Get command to run to run specific test in a file"
license = "Apache-2.0"
homepage = "https://github.com/meain/toffee"
repository = "https://github.com/meain/toffee"
readme = "README.md"

[dependencies]
regex = "1.5.5"
anyhow = "1.0.34"
argh = "0.1.4"
